# scLifeMamba

./: .gitignore  CITATION.cff  FINAL_GITHUB_RELEASE_REPORT.md  GITHUB_STRUCTURE_AUDIT.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md
docs/: MAMBA_BACKEND.md  METHOD_OVERVIEW.md  OPEN_SOURCE_CHECK.md  REPRODUCIBILITY.md  main.tex  supplementary.tex
docs/audit/: CLAIM_VERIFICATION_REPORT.md  EXPERIMENT_EVIDENCE_MAP.md  (+4 more)
examples/: README.md  minimal_smoke_test.py
scripts/: 00_check_environment.py  09_compute_pseudotime.py  101_build_lifecycle_stage_labels.py  102_run_future_lifecycle_prediction.py  103_run_future_pseudotime_regression.py  104_run_trajectory_direction_prediction.py  105_run_ablation_study.py  106_run_second_dataset_validation.py  107_run_perturbation_response.py  108_run_branch_transition_analysis.py  122_collect_lifecycle_results.py  123_generate_lifecycle_report.py  124_generate_lifecycle_figures.py  131_run_revised_trajectory_direction_prediction.py  132_collect_revised_direction_results.py  133_analyze_protein_dominance.py  133_run_protein_dominance_local.py  13_build_trajectory_sequences.py  140_index_local_results.py  141_audit_local_data_availability.py  142_build_rerun_plan.py  143_prepare_pbmc_citeseq_data.py  144_rebuild_local_lifecycle_inputs.py  81_compute_baselines.py  evaluate_model.py  inspect_h5ad.py  preprocess_dataset.py  run_final_audit_experiments.py  run_mamba_final_experiments.py
src/: __init__.py
tests/: test_losses.py  test_metrics.py  test_model_forward.py
(+35 files in other folders)
